# MTS-A

./: .gitignore  .modules  CMakeLists.txt  README.md  client.cpp  lena.pgm  lenaComp30.pgm  lenaComp70b.pgm  main.cpp  noisyImage.pgm  pepper.ascii.pgm  pepper.pgm  server.cpp  test.txt
images/: dog.binary.pgm  lena.ascii.pgm  lena.binary.pgm  noiseyImage.pgm
images/dog/: 0.binary.pgm  10.binary.pgm  20.binary.pgm  50.binary.pgm  60.binary.pgm  80.binary.pgm  90.binary.pgm  dog1.binary.pgm  dog25.binary.pgm  dog31.binary.pgm  dog5.binary.pgm  dog70.binary.pgm  dog90.binary.pgm  lena.binary.pgm
images/lena/: 0.binary.pgm  10.binary.pgm  20.binary.pgm  40.binary.pgm  60.binary.pgm  70.binary.pgm  80.binary.pgm  90.binary.pgm  lena20.ascii.pgm  lena35.ascii.pgm  lena35.binary.pgm  lenaComp0.pgm  lenaComp10.pgm  lenaComp70.pgm  lenaComp90.pgm
images/pepper/: 0.binary.pgm  10.binary.pgm  20.binary.pgm  60.binary.pgm  70.binary.pgm  80.binary.pgm  90.binary.pgm
release/: mainExecutable
src/: CMakeLists.txt  client.cpp  client.h  image.h  image1.h  server.cpp  server.h  syncTCPServer.cpp  syncTCPServer.hpp
src/algorithm/: algorithms.h  imageCompression.h
src/client/: client.cpp  client.h
src/gui/: mainwindow.cpp  mainwindow.h
src/image/: image.h  image2.h  imageFunctions.h
src/server/: image.h  server.cpp  server.h
